--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack",
+    "start": "webpack-dev-server",
+    "start:server": "node server.js",
+    "lint": "yarn run eslint js/*.js server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryan Brown",
@@ -16,5 +19,13 @@
     "three": "^0.93.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.2.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "prettier": "^1.14.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
